# nspec

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CITATION  Makefile  README.md  art.bib  engines.md  flake.nix  hooks.py  justfile  juvix.lock.yaml  macros.py  mkdocs.insiders.yml  mkdocs.yml  pyproject.toml  requirements.txt  script.py  todos.py  tutorial.yml
.changelog/: change_template.md  config.toml
.changelog/v0.1.0/: summary.md
.changelog/v0.1.1/: summary.md
.changelog/v0.1.2/: summary.md
.changelog/v0.1.3/: summary.md
.changelog/v0.1.4/: summary.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: issue_template.md
.github/workflows/: ci.yml  clean-up.yaml  deploy.yml  fix_version_selector.yml  fixversions.yml  pull-requests.yml
.scripts/: file_find_replace.py
docs/: CHANGELOG.md  CNAME  Juvix_Builtins.thy  Package.juvix  Prelude.juvix.md  ROOT  abbreviations.md  anomian.juvix.md  application-architecture.md  applications.md  architecture-1.md  architecture-2.md  changelog.md  disclaimer.md  dynamic-code-loading.md  engine.juvix.md  everything.juvix.md  glossary.md  index.md  juvix.lock.yaml  juvix_builtins.thy  preface.md  prelude.juvix.md  prelude.thy  protocol-architecture.md  resource-machine.md  scope.md  table-of-contents.md  tags.md  templates.md  toc.md
docs/application-architecture/: counter.md  definitions.md  index.md  kudos.md  primitives.md  schelling-tests.md  system-applications.md
docs/application_architecture/: definitions.md  index.md  kudos.md  system_applications.md
docs/applications/: counter.md  generalized-bartering.md  index.md  kudos.md  mesh-messaging.md  physical-logistics.md  primitives.md  proof-of-stake.md  schelling-tests.md  social-media.md
docs/arch/: index.md  overview.md
docs/architecture-1/: README.md  abstractions.md  basic-types.md  computation.md  host.md  index.md  (+4 more)
helpers/: better_snippets.py  differ.py  make_alias.py  move_images.py  replace_includes.py  wikilinks.py
hooks/: better_snippets.py  cli.py  differ.py  fix_changelog.py  images.py  juvix-codeblock-footer.py  juvix.py  juvix_codeblock_footer.py  links.py  mod.py  move_images.py  pyproject.toml  remove_todos.py  snake.py  snippets.py  test.py  todos.py
hooks/common/: cache.py  utils.py
hooks/common/cli/: __init__.py  todos.py
hooks/common/models/: __init__.py  entry.py  fileloc.py  link.py  links.py  todo.py  wikilink.py
hooks/common/preprocesors/: links.py
pr-362/: 404.html  anomian.html  applications-judoc.html  arithmetic-judoc.html  changelog.html  commitment_accumulator-judoc.html  compliance_proof-judoc.html  compliance_unit-judoc.html  delta-judoc.html  delta_proof-judoc.html  everything.html  flow-judoc.html  hash-judoc.html  index-judoc.html  index.html  introduction-judoc.html  juvix.lock.yaml  kind-judoc.html  map-judoc.html  nullifier-judoc.html  nullifier_set-judoc.html  ordered_set-judoc.html  prelude.html  proving_system_delta-judoc.html  proving_system_types-judoc.html  resource_commitment-judoc.html  resource_logic_proof-judoc.html  roles_and_requirements-judoc.html  set-judoc.html  sitemap.xml  storage-judoc.html  transaction-judoc.html  transaction_function-judoc.html  transaction_function_format-judoc.html  transaction_function_vm-judoc.html  transaction_with_payment-judoc.html
(+2026 files in other folders)
