[project]
name = "nspec"
version = "1.0.0"
description = "NSpec is a specification project for the Anoma network."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mdx-truly-sane-lists>=1.3",
    "mkdocs>=1.6.1",
    "mkdocs-bibtex>=4.2.5",
    "mkdocs-drawio>=1.8.2",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-juvix-plugin>=0.4.9",
    "mkdocs-kroki-plugin>=0.9.0",
    "mkdocs-macros-plugin>=1.3.7",
    "mkdocs-material[imaging]>=9.6.12",
    "setuptools>=79.0.1",
]

[dependency-groups]
dev = [
    "click>=8.1.8",
    "colorama>=0.4.6",
    "commitizen>=4.6.0",
    "pre-commit>=4.2.0",
]

[tool.commitizen]
version = "0.1.5"
update_changelog_on_bump = true
changelog_file = "docs/CHANGELOG.md"
